lab1/Test/L1-A-11-53.cmm
float qLxYBjr8UB ( ) {
  struct d36JMaJcvm nS1YEKNlYRmOe ;
}
int ;
int ZZ while , EYlko [ 278967159 ] 

;
int ;
int ( int RXxLpbKzUH5rEO , struct {
  int gfEvV6HcRV ;
}Yscqwypl2A0 ) {
  int m_FlSbsxlg_sLZQI , IQXiSopMZ2TS2sIv = j3EMD 
    ;
  e3dxrhspyX3XpcHgDXxm || ylJKc9nf3kMckfB3b > DD9sTJtv 
    / PpncFPw0ZNFHvy9V ( T5DAwrs5trAE3oVmC9 , JtKB = P 
    && yAE6qm4zjSq2e != rWcft88ynH3HNqJmxYa - y4c60pW4h7ijg2x 
    / P4VZrapNKdCuJEYEdiD [ QA5ouojg0v = lMHSFiY >= K 
    + ! ByPW9fFMQl59RPU ( KX_NM6ZRPs1i9da , BQMnknumJckgK 
    , K , QWrXVFCujLLMD7AnC ! ( Epd && SnKu <= u6KgChbm8S4 
    ( Y8uzysQor9jnTsD < OY / ! yIcKp9QLp ( YqgkBlDCe6tPlr 
    == ZFQ97mWqvv2 ) ) - mD * muf49vPcbDwfQF . B0wgnj3O17xR1M 
    / ! 1813547245.736621802 . nX5SuLQh ) ) ] ) . j + 
    ! Sm7b_IkVBhu ( ) * ! - 574012529 ;
}
int ;
;
int ;
int dCd18heOIdzeR ( ) {
  tPXs ;
  if ( TGzANw7xC )   while ( E8uliD3yoVhmLWwoy7 ) 
      if ( dSW9l )   pxJ0Y0fL9mx1l7 ;
else   hiQWvJk_KWiAjMcp 


else   if ( m1hX_WgNPXcLsMcJpXc )   if ( QW7p93jgr2FX17wolq6 
    ) {
    struct o_ZqMltFh7ZIv5_QJ {
    }jmogBUvLbEya5rd4 ( ;
    struct B0q8cc7Tlx2fSyVdVM FFMYypb2x ;
    return FYCbwhDwOdYsUPB3hOBs ;
  }


}
